fix(module:input-number): text overlaps handler when input too long (#9768)
Set handler-wrap background to @input-number-handler-bg instead of transparent to properly occlude overflowing text content.

--- a/components/input-number/style/index.less
+++ b/components/input-number/style/index.less
@@ -142,7 +142,7 @@
     right: 0;
     width: 22px;
     height: 100%;
-    background: transparent;
+    background: @input-number-handler-bg;
     border-radius: 0 @control-border-radius @control-border-radius 0;
     opacity: 0;
     transition: opacity 0.24s linear 0.1s;
